# hats

./: .gitignore  CHANGES.md  LICENSE  README.md  hats.cabal  stack.yaml
bench/: Bench.hs
example/: Examples.hs
src/Network/: Nats.hs
src/Network/Nats/: Api.hs  Conduit.hs  Connection.hs  ConnectionManager.hs  Dispatcher.hs  JsonApi.hs  Subscriber.hs  Types.hs
src/Network/Nats/Message/: Message.hs  Parser.hs  Writer.hs
test/: CallbackTests.hs  Gnatsd.hs  JsonTests.hs  MessageProps.hs  NatsTests.hs  ReconnectionTests.hs  Spec.hs
