name:                hats
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/hats#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2016 Patrik Sandahl
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Nats
                       Network.Nats.Types
                       Network.Nats.Message.Message
                       Network.Nats.Message.Parser
                       Network.Nats.Message.Writer

  other-modules:       Network.Nats.Api
                       Network.Nats.Connection
                       Network.Nats.ConnectionManager
                       Network.Nats.Dispatcher
                       Network.Nats.JsonApi
                       Network.Nats.Subscriber
                       Network.Nats.Conduit
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-extra
                     , connection
                     , deepseq
                     , network
                     , network-uri
                     , random
                     , stm
                     , text
                     , unordered-containers
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite hats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MessageProps
                       JsonTests
                       NatsTests
  build-depends:       base
                     , aeson
                     , attoparsec
                     , bytestring
                     , hats
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text
                     , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010

benchmark hats-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , async
                     , attoparsec
                     , bytestring
                     , criterion
                     , hats
                     , random
                     , stm
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/hats
